--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,16 @@
   <meta charset="UTF-8">
   <title>tickles</title>
   <meta name="viewport" content="width=device-width , initial-scale=1.0">
+  <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/style.css">
-  <script src="./js/vendors.bundle.js" defer></script>
+  <!-- <script src="./js/vendors.bundle.js" defer></script> -->
   <script src="./js/main.bundle.js" defer></script>
 </head>
 
 <body>
   <h1>test</h1>
+  <div class="image-wrapper js-tickles">
+    <img src="https://picsum.photos/350/250/?random" alt="">
+  </div>
 </body>
 </html>
